# conflictlens

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  ruff.toml
data/: fatalities002_2025_07_t01_cm.csv
models/: schemas.py
services/: data_service.py  forecast_service.py
static/: dashboard.html
tests/: test_main.py
utils/: exceptions.py
